--- a/style.css
+++ b/style.css
@@ -31,3 +31,73 @@ header {
 
 
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+body {
+  margin: 0;
+  font-family: var(--font-body);
+  color: var(--font-color-primary);
+  background-color: var(--primary);
+}
+
+.logoimg {
+  margin-top: 75px;
+}
+
+.productlist img {
+  filter: grayscale(100%);
+  transition: all 0.4s;
+}
+
+.product:hover img {
+  filter: grayscale(30%);
+}
+
+.productlist > section {
+  display: grid;
+  max-width: 1200px;
+  margin: auto;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 60px;
+  margin-bottom: 60px;
+}
+
+.productlist > section > h2 {
+  grid-column: 1/-1;
+  margin-bottom: -40px;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 1);
+  box-shadow: 3px 3px 5px #000000ab;
+  position: relative;
+}
+
+.product p {
+  color: var(--font-color-secondary);
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.productbody {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1em;
+}
+
+.productbody button {
+  margin-top: auto;
+  background-color: var(--secondary-light);
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
