--- a/nav.css
+++ b/nav.css
@@ -1,9 +1,12 @@
-ul {
+/* ul {
     display: flex;
-    background-color: transparent;
+    background-color: blue;
     padding: 0;
     flex-wrap: nowrap;
-    height: 30px;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 100px;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     text-align: center;
@@ -82,3 +85,4 @@ a {
         margin-bottom: 80px;
     }
 }
+*/
