--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
 body {
     margin: 0;
     background-color: white;
@@ -147,4 +154,23 @@ nav a:hover {
     top: 0;
     left: 0;
     background: hotpink;
+}
+/*THE MODAL*/
+.hide {
+  display: none;
+}
+.modal-background {
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+.modal-content {
+  background-color: #fefefe;
+  border: 1px solid #7c1f17;
+  margin: 1em;
+  padding: 2em;
 }
