--- a/style.css
+++ b/style.css
@@ -48,6 +48,17 @@ body {
   color: var(--font-color-primary);
   background-color: var(--primary);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+nav a,
+button,
+footer {
+ font-family: 'Cormorant Garamond', serif;
+}
 nav a,
 h2 {
   text-transform: capitalize;
@@ -88,15 +99,12 @@ nav a:hover {
 
 .logoimg {
   margin-top: 75px;
+    
 }
 
-.productlist img {
-  filter: grayscale(100%);
-  transition: all 0.4s;
-}
 
 .product:hover img {
-  filter: grayscale(30%);
+transform: scale(1.1);
 }
 
 .productlist > section {
@@ -111,6 +119,7 @@ nav a:hover {
 .productlist > section > h2 {
   grid-column: 1/-1;
   margin-bottom: -40px;
+    font-family: 
 }
 
 .product {
@@ -139,7 +148,7 @@ nav a:hover {
 .productbody button {
   margin-top: auto;
   background-color: var(--secondary-light);
-  color: #fff;
+  color: black;
   border: 0;
   padding: 8px;
   font-size: 1.3rem;
@@ -173,4 +182,15 @@ nav a:hover {
   border: 1px solid #7c1f17;
   margin: 1em;
   padding: 2em;
+}
+footer {margin-bottom: 0;
+  height: 100px;
+background-color: dimgray;
+ color: white;
+  display: flex;
+  align-items: center;
+}
+
+footer p {
+  margin-left: 60px;
 }
